--- a/package.json
+++ b/package.json
@@ -14,44 +14,45 @@
     "last 2 versions"
   ],
   "devDependencies": {
-    "asciidoctor.js": "1.5.9",
-    "autoprefixer": "~9.7",
-    "browser-pack-flat": "~3.4",
-    "browserify": "~16.5",
-    "cssnano": "~4.1",
-    "eslint": "~6.8",
-    "eslint-config-standard": "~14.1",
-    "eslint-plugin-import": "~2.20",
-    "eslint-plugin-node": "~11.1",
-    "eslint-plugin-promise": "~4.2",
-    "eslint-plugin-standard": "~4.0",
-    "fancy-log": "~1.3",
-    "fs-extra": "~8.1",
-    "gulp": "~4.0",
-    "gulp-concat": "~2.6",
-    "gulp-connect": "~5.7",
-    "gulp-eslint": "~6.0",
-    "gulp-imagemin": "~6.2",
-    "gulp-postcss": "~8.0",
-    "gulp-stylelint": "~11.0",
-    "gulp-uglify": "~3.0",
-    "gulp-vinyl-zip": "~2.2",
-    "handlebars": "~4.7",
-    "highlight.js": "9.18.3",
-    "js-yaml": "~3.13",
-    "merge-stream": "~2.0",
-    "postcss-calc": "~7.0",
-    "postcss-custom-properties": "~9.1",
-    "postcss-import": "~12.0",
-    "postcss-url": "~8.0",
-    "prettier-eslint": "~9.0",
-    "require-directory": "~2.1",
-    "require-from-string": "~2.0",
-    "stylelint": "~13.3",
-    "stylelint-config-standard": "~20.0",
+    "asciidoctor.js": "^1",
+    "autoprefixer": "^10",
+    "browser-pack-flat": "^3",
+    "browserify": "^17",
+    "core-js": "^3",
+    "cssnano": "^4",
+    "eslint": "^6",
+    "eslint-config-standard": "^14",
+    "eslint-plugin-import": "^2",
+    "eslint-plugin-node": "^11",
+    "eslint-plugin-promise": "^4",
+    "eslint-plugin-standard": "^4",
+    "fancy-log": "^1",
+    "fs-extra": "^9",
+    "gulp": "^4",
+    "gulp-concat": "^2",
+    "gulp-connect": "^5",
+    "gulp-eslint": "^6",
+    "gulp-imagemin": "^7",
+    "gulp-postcss": "^9",
+    "gulp-stylelint": "^13",
+    "gulp-uglify": "^3",
+    "gulp-vinyl-zip": "^2",
+    "handlebars": "^4",
+    "highlight.js": "^10",
+    "js-yaml": "^4",
+    "merge-stream": "^2",
+    "postcss-calc": "^8",
+    "postcss-custom-properties": "^11",
+    "postcss-import": "^14",
+    "postcss-url": "^10",
+    "prettier-eslint": "^12",
+    "require-directory": "^2",
+    "require-from-string": "^2",
+    "stylelint": "^13",
+    "stylelint-config-standard": "^22",
     "typeface-roboto": "0.0.75",
     "typeface-roboto-mono": "0.0.75",
-    "vinyl-buffer": "~1.0",
-    "vinyl-fs": "~3.0"
+    "vinyl-buffer": "^1",
+    "vinyl-fs": "^3"
   }
 }
