--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "require-from-string": "^2",
     "stylelint": "^13",
     "stylelint-config-standard": "^22",
+    "tailwindcss": "^2",
     "typeface-roboto": "0.0.75",
     "typeface-roboto-mono": "0.0.75",
     "vinyl-buffer": "^1",
